force-app/main/default/objects/Vertex_Log__c/Vertex_Log__c.object-meta.xml
<CustomObject>
    <label>Vertex XML Log</label>
    <nameField>
        <displayFormat>VLN-{00000000}</displayFormat>
        <label>Vertex Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vertex Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>