force-app/main/default/objects/Vertex_Log__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>This field helps in understanding vertex logging for Bills or Charges. Valid Labels: CHARGE VERTEX TAX API, BILL VERTEX TAX API</description>
    <inlineHelpText>This field helps in understanding vertex logging for Bills or Charges.  Valid Labels: CHARGE VERTEX TAX API, BILL VERTEX TAX API</inlineHelpText>
    <label>Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>