force-app/main/default/objects/Vertex_Log__c/fields/Contract_Names__c.field-meta.xml
<CustomField>
    <fullName>Contract_Names__c</fullName>
    <description>Contract Names on which Vertex calls</description>
    <inlineHelpText>Contract Names on which Vertex calls</inlineHelpText>
    <label>Contract Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>