force-app/main/default/objects/Vertex_Log__c/fields/Request_XML__c.field-meta.xml
<CustomField>
    <fullName>Request_XML__c</fullName>
    <description>Recording Vertex Request XML</description>
    <inlineHelpText>Recording Vertex Request XML</inlineHelpText>
    <label>Request XML</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>