force-app/main/default/objects/Vertex_Log__c/fields/Response_XML__c.field-meta.xml
<CustomField>
    <fullName>Response_XML__c</fullName>
    <label>Response XML</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>