force-app/main/default/objects/Vertex_Log__c/listViews/Detail.listView-meta.xml
<ListView>
    <fullName>Detail</fullName>
    <columns>NAME</columns>
    <columns>Contract_Names__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Request_XML__c</columns>
    <columns>Response_XML__c</columns>
    <filterScope>Everything</filterScope>
    <label>Detail</label>
</ListView>